--- a/modules/m1/partials/rapports.adoc
+++ b/modules/m1/partials/rapports.adoc
@@ -33,7 +33,7 @@
 
  - [[[Reitzer]]] Reitzer Marie, _Projet de réalisation d’un applicatif destiné à extraire une synthèse de la vie et de la valorisation d’un ou de plusieurs contrats en assurance vie  appartenant à un tiers._, link:https://www.e-i.com/fr/index.html[Euro Information Developpements], link:{attachmentsdir}/++Reitzer-Marie.pdf++[Reitzer-Marie.pdf],  link:{attachmentsdir}/++Reitzer-Marie-slides.pdf++[Reitzer-Marie-slides.pdf] 
 
- - [[[Schuffenecker]]] Schuffenecker Antoine, _Analyse et modélisation de causes d'abandon d'un formulaire en ligne._x000d_
+ - [[[Schuffenecker]]] Schuffenecker Antoine, _Analyse et modélisation de causes d'abandon d'un formulaire en ligne.
 création d'un modèle d'aide à un service de ressources humaines_, link:https://www.alphaby.fr/[Alphaby], link:{attachmentsdir}/++Schuffenecker-Antoine.pdf++[Schuffenecker-Antoine.pdf],  link:{attachmentsdir}/++Schuffenecker-Antoine-slides.pdf++[Schuffenecker-Antoine-slides.pdf] 
 
  - [[[Untz]]] Untz Mélissa, _Le cycliste virtuel_, link:[Universite De Strasbourg - Ufr Math-Info], link:{attachmentsdir}/++Untz-Melissa.pdf++[Untz-Melissa.pdf],  link:{attachmentsdir}/++Untz-Mélissa-slides.pdf++[Untz-Mélissa-slides.pdf] 
